--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "be-nc-games",
+  "name": "listen.js",
   "version": "1.0.0",
   "description": "bc-nc-games",
   "main": "index.js",
@@ -7,7 +7,9 @@
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed": "node ./db/seeds/run-seed.js",
     "test": "jest",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "start": "node listen.js",
+    "seed-prod": "NODE_ENV=production npm run seed"
   },
   "repository": {
     "type": "git",
@@ -23,6 +25,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
+    "pg-format": "^1.0.4",
     "pg": "^8.7.3"
   },
   "devDependencies": {
@@ -30,7 +33,6 @@
     "jest": "^27.5.1",
     "jest-extended": "^2.0.0",
     "jest-sorted": "^1.0.14",
-    "pg-format": "^1.0.4",
     "supertest": "^6.3.3"
   },
   "jest": {
