--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "listen.js",
+  "name": "board-games-api",
   "version": "1.0.0",
   "description": "bc-nc-games",
-  "main": "index.js",
+  "main": "listen.js",
   "scripts": {
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed": "node ./db/seeds/run-seed.js",
